# cstrlib

./: CMakeLists.txt  cstrlib.h  readme.md  strindex.c
