cmake_minimum_required(VERSION 3.5)
PROJECT(cstrlib)

SET(LIB_DIR_PREFIX /usr/local)

AUX_SOURCE_DIRECTORY(. LIB_SRC)
ADD_LIBRARY(cstrlib STATIC ${LIB_SRC})

INSTALL(TARGETS cstrlib ARCHIVE DESTINATION lib)
INSTALL(FILES cstrlib.h DESTINATION include)

#SET(CMAKE_INSTALL_PREFIX ..)
SET(CMAKE_INSTALL_PREFIX ${LIB_DIR_PREFIX})